# llama

./: .gitignore  CMakeLists.txt
cmake/: FindCUnit.cmake
src/: CMakeLists.txt  attention.c  attention.h  config.c  config.h  decoder.h  llamaConfig.c  llamaConfig.h  main.c  max.c  max.h  mlp.c  mlp.h  tensor.c  tensor.h  transformers.c  transformers.h
tests/: CMakeLists.txt  max_test.c  tests.c  transformers_test.c
